@@ -154,6 +154,10 @@ Mojolicious
 
 =item *
 
+Mojolicious::Plugin::Gravatar
+
+=item *
+
 Mojolicious::Plugin::Ident
 
 =item *
