@@ -67,6 +67,7 @@ Mojolicious::Plugin::Ident                     = 0
 Mojolicious::Plugin::RenderFile                = 0
 Mojolicious::Plugin::SslAuth                   = 0
 Mojolicious::Plugin::TtRenderer                = 0
+Mojolicious::Plugin::Gravatar                  = 0
 Moose                                          = 0
 Net::DNS                                       = 0
 Number::Bytes::Human                           = 0
